Initial Author page layout
Added centering to tag title

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -10,6 +10,16 @@ nav{
 }
 
 /*******************************************
+ * Author
+ *******************************************/
+.author-meta{
+    font-size: 1.4em;
+}
+.author-meta a, .author-meta span{
+    margin: 5px;
+}
+
+/*******************************************
  * Site Header
  ******************************************/
  .home-template .site-header{
