--- a/author.hbs
+++ b/author.hbs
@@ -4,53 +4,49 @@
 {{#author}}
 {{!-- Everything inside the #author tags pulls data from the author --}}
 
+{{> "site-nav"}}
 
 {{> header background=feature_image}} {{!--Special header.hbs partial to generate the <header> tag--}}
-    <div class="inner">
-        {{> "site-nav"}}
-        <div class="site-header-content">
-            {{#if profile_image}}
-                <img class="author-profile-image" src="{{profile_image}}" alt="{{name}}" />
+<div class="container">
+    <div class="row center">
+        {{#if profile_image}}
+        <img class="big-author-profile-image" src="{{profile_image}}" alt="{{name}}" />
+        {{/if}}
+        <h1 class="site-title">{{name}}</h1>
+        {{#if bio}}
+        <h5 class="author-bio">{{bio}}</h5>
+        {{/if}}
+        <div class="author-meta">
+            {{#if location}}
+            <span>{{location}}</span>
+            <span class="bull">&bull;</span>
             {{/if}}
-            <h1 class="site-title">{{name}}</h1>
-            {{#if bio}}
-                <h2 class="author-bio">{{bio}}</h2>
+            <span>{{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}} </span>
+            <span class="bull">&bull;</span>
+
+            {{#if website}}
+            <a href="{{website}}" target="_blank" rel="noopener"><i class="fas fa-globe"></i></a>
             {{/if}}
-            <div class="author-meta">
-                {{#if location}}
-                    <div class="author-location">{{location}} <span class="bull">&bull;</span></div>
-                {{/if}}
-                <div class="author-stats">
-                    {{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}} <span class="bull">&bull;</span>
-                </div>
-                {{#if website}}
-                    <a class="social-link social-link-wb" href="{{website}}" target="_blank" rel="noopener">{{> "icons/website"}}</a>
-                {{/if}}
-                {{#if twitter}}
-                    <a class="social-link social-link-tw" href="{{twitter_url}}" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
-                {{/if}}
-                {{#if facebook}}
-                    <a class="social-link social-link-fb" href="{{facebook_url}}" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
-                {{/if}}
-                <a class="social-link social-link-rss" href="https://feedly.com/i/subscription/feed/{{url absolute="true"}}rss/" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
-            </div>
+            {{#if twitter}}
+            <a href="{{twitter_url}}" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a></li>
+            {{/if}}
+            {{#if facebook}}
+            <a href="{{facebook_url}}" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+            {{/if}}
+            <a href="https://feedly.com/i/subscription/feed/{{url absolute="true"}}rss/" target="_blank"
+                rel="noopener"><i class="fas fa-rss"></i></a>
         </div>
     </div>
-</header>
+
 {{/author}}
 
-{{!-- The main content area --}}
-<main id="site-main" class="site-main outer">
-    <div class="inner">
+    {{!-- The main content area --}}
+    <div class="post-feed row">
+        {{#foreach posts}}
 
-        <div class="post-feed">
-            {{#foreach posts}}
+        {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+        {{> "post-card"}}
 
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-
-            {{/foreach}}
-        </div>
-
+        {{/foreach}}
     </div>
-</main>
+</div>
