--- a/tag.hbs
+++ b/tag.hbs
@@ -6,7 +6,7 @@
 <div class="container">
     {{#tag}}
     {{> header background=feature_image}} {{!--Special header.hbs partial to generate the <header> tag--}}
-        <div class="inner">
+        <div class="center">
             <div class="site-header-content">
                 <h1 class="site-title">{{name}}</h1>
                 <h2 class="site-description">
